--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "swooletw/laravel-swoole": "^2.6",
+        "tymon/jwt-auth": "^1.0",
         "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
@@ -22,7 +23,7 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^9.*"
     },
     "config": {
         "optimize-autoloader": true,
