--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
+        "guzzlehttp/guzzle": "^7",
+        "laravel/framework": "^8",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.0",
         "swooletw/laravel-swoole": "^2.6",
         "tymon/jwt-auth": "^1.0",
         "zircote/swagger-php": "^3.0"
@@ -22,7 +23,7 @@
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
+        "nunomaduro/collision": "^5",
         "phpunit/phpunit": "^9"
     },
     "config": {
