--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "swooletw/laravel-swoole": "^2.6",
         "tymon/jwt-auth": "^1.0",
         "zircote/swagger-php": "^3.0"
