--- a/composer.json
+++ b/composer.json
@@ -8,23 +8,22 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "*",
+        "php": "^8",
         "darkaonline/l5-swagger": "^8.0",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
+        "fruitcake/laravel-cors": "*",
         "guzzlehttp/guzzle": "^7",
-        "laravel/framework": "^8",
+        "laravel/framework": "^9",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
-        "league/flysystem-aws-s3-v3": "~1",
+        "league/flysystem-aws-s3-v3": "*",
         "swooletw/laravel-swoole": "^2.6",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
+	"spatie/laravel-ignition": "^1.0",
+	"fakerphp/faker": "*",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5",
+        "nunomaduro/collision": "^6",
         "phpunit/phpunit": "^9"
     },
     "config": {
